@@ -213,21 +213,6 @@ operator|==
 literal|null
 condition|)
 block|{
-name|type
-operator|=
-name|findBySuperclasses
-argument_list|(
-name|valueClass
-argument_list|)
-expr_stmt|;
-block|}
-if|else if
-condition|(
-name|type
-operator|==
-name|NULL_DUMMY
-condition|)
-block|{
 return|return
 literal|null
 return|;
@@ -236,215 +221,6 @@ return|return
 name|type
 return|;
 block|}
-specifier|protected
-name|ValueObjectType
-argument_list|<
-name|?
-argument_list|,
-name|?
-argument_list|>
-name|findBySuperclasses
-parameter_list|(
-specifier|final
-name|Class
-argument_list|<
-name|?
-argument_list|>
-name|baseClass
-parameter_list|)
-block|{
-name|ValueObjectType
-argument_list|<
-name|?
-argument_list|,
-name|?
-argument_list|>
-name|type
-init|=
-literal|null
-decl_stmt|;
-name|Class
-argument_list|<
-name|?
-argument_list|>
-name|searchClass
-init|=
-name|baseClass
-operator|.
-name|getSuperclass
-argument_list|()
-decl_stmt|;
-while|while
-condition|(
-name|searchClass
-operator|!=
-literal|null
-operator|&&
-operator|!
-name|searchClass
-operator|.
-name|equals
-argument_list|(
-name|Object
-operator|.
-name|class
-argument_list|)
-condition|)
-block|{
-name|type
-operator|=
-name|typeCache
-operator|.
-name|get
-argument_list|(
-name|searchClass
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|type
-operator|!=
-literal|null
-condition|)
-block|{
-comment|// cache it for faster search later
-name|typeCache
-operator|.
-name|put
-argument_list|(
-name|baseClass
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|type
-argument_list|)
-expr_stmt|;
-break|break;
-block|}
-name|searchClass
-operator|=
-name|searchClass
-operator|.
-name|getSuperclass
-argument_list|()
-expr_stmt|;
-block|}
-comment|// as well cache null result
-if|if
-condition|(
-name|type
-operator|==
-literal|null
-condition|)
-block|{
-name|typeCache
-operator|.
-name|put
-argument_list|(
-name|baseClass
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|NULL_DUMMY
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|type
-return|;
-block|}
-specifier|private
-specifier|static
-specifier|final
-name|ValueObjectType
-argument_list|<
-name|?
-argument_list|,
-name|?
-argument_list|>
-name|NULL_DUMMY
-init|=
-operator|new
-name|ValueObjectType
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|Class
-argument_list|<
-name|?
-argument_list|>
-name|getTargetType
-parameter_list|()
-block|{
-return|return
-literal|null
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|Class
-argument_list|<
-name|?
-argument_list|>
-name|getValueType
-parameter_list|()
-block|{
-return|return
-literal|null
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|Object
-name|toJavaObject
-parameter_list|(
-name|Object
-name|value
-parameter_list|)
-block|{
-return|return
-literal|null
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|Object
-name|fromJavaObject
-parameter_list|(
-name|Object
-name|object
-parameter_list|)
-block|{
-return|return
-literal|null
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|String
-name|toCacheKey
-parameter_list|(
-name|Object
-name|object
-parameter_list|)
-block|{
-return|return
-literal|null
-return|;
-block|}
-block|}
-decl_stmt|;
 block|}
 end_class
 
