@@ -32,7 +32,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * A {@link ExtendedTypeFactory} that makes a {@link ExtendedType} usable for subclasses  * of the className in the {@link ExtendedType}.  *   * @since 3.0  */
+comment|/**  * A {@link ExtendedTypeFactory} that makes a {@link ExtendedType} usable for subclasses  * of the className in the {@link ExtendedType}.  *   * @since 3.0  * @deprecated since 4.1 it is unused, as this factory is faulty assuming that  *              we can freely interchange base class and it's subclasses.  *  */
 end_comment
 
 begin_class
