@@ -41,6 +41,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|math
+operator|.
+name|BigDecimal
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -71,6 +81,18 @@ begin_import
 import|import static
 name|org
 operator|.
+name|hamcrest
+operator|.
+name|CoreMatchers
+operator|.
+name|instanceOf
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
 name|junit
 operator|.
 name|Assert
@@ -88,6 +110,18 @@ operator|.
 name|Assert
 operator|.
 name|assertSame
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertThat
 import|;
 end_import
 
@@ -128,6 +162,8 @@ decl_stmt|,
 name|tstType3
 decl_stmt|,
 name|tstType4
+decl_stmt|,
+name|tstType5
 decl_stmt|;
 name|ValueObjectTypeFactory
 name|factory
@@ -219,6 +255,22 @@ name|String
 index|[]
 operator|.
 expr|class
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|list
+operator|.
+name|add
+argument_list|(
+name|createMockValueType
+argument_list|(
+name|TestClass
+operator|.
+name|class
+argument_list|,
+name|BigDecimal
+operator|.
+name|class
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -334,6 +386,23 @@ operator|.
 name|registerType
 argument_list|(
 name|tstType4
+argument_list|)
+expr_stmt|;
+name|tstType5
+operator|=
+operator|new
+name|MockExtendedType
+argument_list|(
+name|BigDecimal
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|extendedTypeMap
+operator|.
+name|registerType
+argument_list|(
+name|tstType5
 argument_list|)
 expr_stmt|;
 name|factory
@@ -568,6 +637,251 @@ operator|.
 name|extendedType
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testInheritantType
+parameter_list|()
+block|{
+name|ValueObjectTypeFactory
+operator|.
+name|ExtendedTypeConverter
+name|converter5
+init|=
+operator|(
+name|ValueObjectTypeFactory
+operator|.
+name|ExtendedTypeConverter
+operator|)
+name|factory
+operator|.
+name|getType
+argument_list|(
+name|TestClass
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|converter5
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|tstType5
+argument_list|,
+name|converter5
+operator|.
+name|extendedType
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**      * Test case for CAY-2411      */
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testInheritantValueTypeOverExtendedType
+parameter_list|()
+block|{
+comment|// setup
+name|ExtendedTypeMap
+name|map
+decl_stmt|;
+name|BigDecimalType
+name|bigDecimalType
+init|=
+operator|new
+name|BigDecimalType
+argument_list|()
+decl_stmt|;
+name|ValueObjectType
+name|valueObjectType
+decl_stmt|;
+block|{
+name|map
+operator|=
+operator|new
+name|ExtendedTypeMap
+argument_list|()
+expr_stmt|;
+name|map
+operator|.
+name|registerType
+argument_list|(
+name|bigDecimalType
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|ValueObjectType
+argument_list|<
+name|?
+argument_list|,
+name|?
+argument_list|>
+argument_list|>
+name|list
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|valueObjectType
+operator|=
+name|mock
+argument_list|(
+name|ValueObjectType
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|valueObjectType
+operator|.
+name|getValueType
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|TestClass
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|valueObjectType
+operator|.
+name|getTargetType
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|BigDecimal
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|list
+operator|.
+name|add
+argument_list|(
+name|valueObjectType
+argument_list|)
+expr_stmt|;
+name|DefaultValueObjectTypeRegistry
+name|registry
+init|=
+operator|new
+name|DefaultValueObjectTypeRegistry
+argument_list|(
+name|list
+argument_list|)
+decl_stmt|;
+name|map
+operator|.
+name|addFactory
+argument_list|(
+operator|new
+name|ValueObjectTypeFactory
+argument_list|(
+name|map
+argument_list|,
+name|registry
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|// test
+name|ExtendedType
+name|type1
+init|=
+name|map
+operator|.
+name|getRegisteredType
+argument_list|(
+name|BigDecimal
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|assertSame
+argument_list|(
+name|bigDecimalType
+argument_list|,
+name|type1
+argument_list|)
+expr_stmt|;
+name|ExtendedType
+name|type2
+init|=
+name|map
+operator|.
+name|getRegisteredType
+argument_list|(
+name|TestClass
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|assertThat
+argument_list|(
+name|type2
+argument_list|,
+name|instanceOf
+argument_list|(
+name|ValueObjectTypeFactory
+operator|.
+name|ExtendedTypeConverter
+operator|.
+name|class
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|valueObjectType
+argument_list|,
+operator|(
+operator|(
+name|ValueObjectTypeFactory
+operator|.
+name|ExtendedTypeConverter
+operator|)
+name|type2
+operator|)
+operator|.
+name|valueObjectType
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+class|class
+name|TestClass
+extends|extends
+name|BigDecimal
+block|{
+specifier|public
+name|TestClass
+parameter_list|(
+name|long
+name|val
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|val
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
